# Morski-Smetar

./: CMakeLists.txt  Game.cpp  Game.h  Game.hpp  README.md  main.cpp  makefile
Assets/: Boat.aseprite  Enemy.aseprite  Exclamation.aseprite  Fishing-Boat.aseprite  Game.aseprite  MainMenu.aseprite  Player.aseprite  Sand.aseprite  Tractor.aseprite  Trash-Bottle.aseprite  Trash-Box.aseprite  Trash-Can.aseprite  Wave.aseprite
Config/: Config.cpp  Config.h  Config.hpp  Data.cpp  Data.h  Data.hpp
Entities/: Enemy.cpp  Enemy.h  Enemy.hpp  Friendly.cpp  Friendly.h  Friendly.hpp  GameObject.cpp  GameObject.h  Player.cpp  Player.h  Player.hpp  Text.cpp  Text.hpp  Trash.cpp  Trash.h  Trash.hpp  Wave.cpp  Wave.h  Wave.hpp
Recording/: Reader.cpp  Reader.h  Recorder.cpp  Recorder.h
State Capturing/: Reader.cpp  Reader.h  Recorder.cpp  SaveManager.cpp  SaveManager.h
Tools/: BinaryFile.cpp  BinaryFile.h  Collision.cpp  Collision.h  Collision.hpp  File.cpp  File.h  Math.cpp  Math.h  Math.hpp  Overloads.cpp  Overloads.h  Overloads.hpp  Path.cpp  Path.h  Random.cpp  Random.h  Random.hpp  SHA256.cpp  SHA256.h  filesystem.cpp  filesystem.h
UI/: Button.cpp  Button.h  Input.cpp  Input.h  Line.cpp  Line.h  Line.hpp  Screen.cpp  Screen.h  Screen.hpp  Text.cpp  Text.h  Text.hpp  Window.cpp  Window.h  Window.hpp
etc/: SDL_Scancodes.csv  Scancode_parser.py
